--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, tempora reprehenderit! Facilis, consequuntur maiores eligendi vitae dignissimos officiis fugit nam quidem quibusdam, iusto rerum quasi repellat corrupti. Recusandae, ab veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam ipsam culpa mollitia accusantium, adipisci totam ex nobis voluptatum inventore natus vero fugiat placeat libero! Non, aperiam pariatur? Repudiandae, porro ipsam?
             </p>
         </article>
+        <p class="p-end">
+            Estes são os 4 principais membros.
+        </p>
     </main>
     <footer>
         <p>
